welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: reassignment to val
	if (vacation == false && (day=1 || day=2 ||day=3 ||day=4 || day=5)) { return "7:00" }
                                     ^alarmClock:4: error: reassignment to val
	else if (vacation == false && (day=0 || day=6 )) { return "10:00" }
                                          ^alarmClock:5: error: reassignment to val
	else if (vacation == true && (day=1 ||day=2 ||day=3 ||day=4 || day=5)) { return "10:00" }
                                         ^